--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th>image</th>
       <th>name</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
   <tbody>
@@ -11,6 +11,9 @@
       <tr>
         <td><%= image_tag user.get_profile_image(50, 50) %></td>
         <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <td><%= render "relationships/follow_button", user: user unless user == current_user %></td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
