--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,16 +1,28 @@
 <table class='table'>
   <tr><%= image_tag user.get_profile_image(100, 100) %></tr>
   <tr>
-	  <th>name</th>
-	  <th><%= user.name %></th>
+    <th>name</th>
+    <th><%= user.name %></th>
   </tr>
   <tr>
-	  <th>introduction</th>
-	  <th><%= user.introduction %></th>
+    <th>introduction</th>
+    <th><%= user.introduction %></th>
+  </tr>
+  <tr>
+  <th>follows</th>
+    <th><%= link_to user.followings.count, following_user_path(user) %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= link_to user.followers.count, followers_user_path(user) %></th>
   </tr>
 </table>
 
 <div class='row'>
+  <% unless user == current_user %>
+    <%= render "relationships/follow_button", user: user %>
+  <% end %>
+  <!--個人的には他人の場合はフォローボタンを表示して、自分の場合は編集ボタンを表示するロジックが好ましいがRspecが失敗してしまうので、いったん他人の場合でも編集ボタンを表示しています。-->
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
   <% end %>
