--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,7 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td><%= render "favorites/favorite_button", book: book %></td>
+        <td id="<%= dom_id(book, :favorite) %>"><%= render "favorites/favorite_button", book: book %></td>
         <td>コメント数: <%= book.book_comments.count %></td>
       </tr>
     <% end %>
