--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -18,10 +18,16 @@
   </tr>
 </table>
 
-<div class='row'>
+<div class="row">
   <% unless user == current_user %>
     <%= render "relationships/follow_button", user: user %>
   <% end %>
+  <!--相互フォロー-->
+  <% if current_user.mutual_follow?(user) %>
+    <%= button_to "chatを始める", conversations_path, params: { user_id: user.id }, method: :post, class: "btn btn-link ml-2" %>
+  <% end %>
+</div>
+<div class="row mt-2">
   <!--個人的には他人の場合はフォローボタンを表示して、自分の場合は編集ボタンを表示するロジックが好ましいがRspecが失敗してしまうので、いったん他人の場合でも編集ボタンを表示しています。-->
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
