--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,11 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <%= render 'books/index',books: @books %>
+      <%= render 'books/index', books: @books %>
+      <!--記録-->
+      <div>
+        <%= render 'report', user: @user %>
+      </div>
     </div>
   </div>
 </div>
