--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,22 @@
       <h2>Books</h2>
       <%= render 'books/index', books: @books %>
       <!--記録-->
-      <div>
+      <div class="mb-4">
         <%= render 'compare_report', user: @user %>
       </div>
-      <div>
+      <div class="mb-4">
         <%= render 'graph_report', user: @user %>
+      </div>
+      <div class="mb-4">
+        <%= form_with url: search_user_path(@user), method: :get, local: false do |f| %>
+          <%= f.date_field :created_at %>
+          <%= f.submit "検索", class: 'btn btn-primary btn-sm' %>
+        <% end %>
+        <div id="<%= dom_id(@user, :books_count) %>">
+          <% if @books_count.present? %>
+            <%= render 'search_report', books_count: @books_count %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
