--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -4,7 +4,8 @@
       <th></th>
       <th>グループ名</th>
       <th>紹介文</th>
-      <th colspan="1"></th>
+      <th>メンバー数</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,9 +17,12 @@
         </td>
         <td><%= link_to group.name, group %></td>
         <td><%= group.introduction %></td>
-        <% if group.owner?(current_user) %>
-          <td><%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-success" %></td>
-        <% end %>
+        <td><%= group.group_users.count %></td>
+        <td>
+          <% if group.owner?(current_user) %>
+            <%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-success" %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
