--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -15,7 +15,7 @@
             <th>グループ名</th>
             <th>紹介文</th>
             <th>メンバー</th>
-            <th colspan="1"></th>
+            <th colspan="2"></th>
           </tr>
         </thead>
        <tbody>
@@ -26,6 +26,7 @@
             <td><%= simple_format @group.users.pluck(:name).join("\n") %></td>
             <% if @group.owner?(current_user) %>
               <td><%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %></td>
+              <td><%= link_to 'Notice an Event', new_group_group_event_path(@group), class: "btn btn-sm btn-info" %></td>
             <% else %>
               <% if @group.member?(current_user) %>
                 <td><%= link_to 'Leave this group', group_group_user_path(@group), method: :delete, class: "btn btn-sm btn-danger" %></td>
