--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,6 +20,7 @@
           <td id="<%= dom_id(@book, :favorite) %>"><%= render "favorites/favorite_button", book: @book %></td>
           <td id="<%= dom_id(@book, :comments_count) %>">コメント数: <%= @book.book_comments.count %></td>
           <td>閲覧数: <%= @book.footprints.count %></td>
+          <td id="<%= dom_id(@book, :rating) %>"><%= render "books/rating", book: @book %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
