--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,10 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      <div class="btn-group">
+        <%= link_to "新しい順", books_path(sort: "latest"), class: "btn btn-link" %>
+        <%= link_to "評価の高い順", books_path(sort: "rating"), class: "btn btn-link" %>
+      </div>
       <%= render 'index', books: @books%>
     </div>
   </div>
