--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,8 +1,16 @@
 <div class="d-flex justify-content-center my-2">
-  <%= form_with model: @search_form, url: searches_path, scope: :q, method: :get, local: true do |f| %>
-    <%= f.text_field :keyword %>
-    <%= f.select :model, SearchForm::MODELS %>
-    <%= f.select :method, SearchForm::METHODS %>
-    <%= f.submit "検索" %>
-  <% end %>
+  <div>
+    <%= form_with model: @search_form, url: searches_path, scope: :q, method: :get, local: true do |f| %>
+      <%= f.text_field :keyword %>
+      <%= f.select :model, SearchForm::MODELS %>
+      <%= f.select :method, SearchForm::METHODS %>
+      <%= f.submit "検索" %>
+    <% end %>
+  </div>
+  <div class="ml-2">
+    <%= form_with model: @categories_form, url: categories_path, scope: :q, method: :get, local: true do |f| %>
+      <%= f.text_field :category %>
+      <%= f.submit "タグ検索" %>
+    <% end %>
+  </div>
 </div>
