--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Tag</th>
       <th colspan="5"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><%= link_to book.category, categories_path(q: {category: book.category}) if book.category.present? %></td>
         <td id="<%= dom_id(book, :favorite) %>"><%= render "favorites/favorite_button", book: book %></td>
         <td>コメント数: <%= book.book_comments.count %></td>
         <td>閲覧数: <%= book.footprints.count %></td>
