--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,7 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td><%= link_to @book.category, categories_path(q: {category: @book.category}) if @book.category.present? %></td>
           <td id="<%= dom_id(@book, :favorite) %>"><%= render "favorites/favorite_button", book: @book %></td>
           <td id="<%= dom_id(@book, :comments_count) %>">コメント数: <%= @book.book_comments.count %></td>
           <td>閲覧数: <%= @book.footprints.count %></td>
