--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,11 @@
-@use "~bootstrap/scss/bootstrap"; 
+@use "~bootstrap/scss/bootstrap";
 @use '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+.cover {
+  background-image: url("../images/cover.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+}
